# Dump

./: README.md
Backup/: crashfix-service-1.0.4-Linux-amd64.deb  crashfix-service-1.0.4-Linux-amd64.rpm  crashfix-service-1.0.4-Linux-i386.deb  crashfix-service-1.0.4-Linux-i386.rpm
crashfix/: .gitignore
crashfix/crashfix_service/: CMakeLists.txt  COPYRIGHT.TXT  HowToBuild.txt  README.TXT  dumper_vs2010.sln
crashfix/crashfix_service/conf/: crashfixd.conf.linux  crashfixd.conf.win32
crashfix/crashfix_service/daemon/: CMakeLists.txt  CSmtp.cpp  CSmtp.h  Daemon.cpp  Daemon.h  DaemonConsole.cpp  DaemonConsole.h  ServerThread.cpp  ServerThread.h  SocketServer.cpp  SocketServer.h  client.php  crashfixd.sh  daemon_vs2010.vcxproj  daemon_vs2010.vcxproj.filters  main.cpp  stdafx.h
crashfix/crashfix_service/daemon_tests/: CMakeLists.txt  MtClient.cpp  MtClient.h  MultiThreadedTests.cpp  RequestTests.cpp  ServiceHelpers.cpp  ServiceHelpers.h  ServiceTests.cpp  daemon_tests_vs2010.vcxproj  daemon_tests_vs2010.vcxproj.filters  status.php  stdafx.cpp  stdafx.h
crashfix/crashfix_service/dumper/: CMakeLists.txt  dumper.cpp  dumper_vs2010.vcxproj  dumper_vs2010.vcxproj.filters  stdafx.cpp  stdafx.h
crashfix/crashfix_service/libdumper/: AssyncNotification.cpp  AssyncNotification.h  BasePdbStream.cpp  BasePdbStream.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Config.cpp  Config.h  CrashDescReader.cpp  CrashDescReader.h  CrashReportReader.cpp  CrashReportReader.h  CritSec.h  DbgHelpDumpWriter.cpp  DbgHelpDumpWriter.h  DumpStruct.h  FileFinder.cpp  FileFinder.h  FileMapping.cpp  FileMapping.h  HttpRequestSender.cpp  HttpRequestSender.h  LibDumperVersion.h  Log.cpp  Log.h  MiniDumpReader.cpp  MiniDumpReader.h  MiniDumpWriter.h  MiniDumpWriterImpl.cpp  MiniDumpWriterImpl.h  Misc.cpp  Misc.h  MsfFile.cpp  MsfFile.h  MsfStream.cpp  MsfStream.h  Outputter.cpp  (+51 more)
crashfix/crashfix_service/libdumper_tests/: BufferTests.cpp  CMakeLists.txt  CommandProcessorTests.cpp  ConfigTests.cpp  CrashDescReaderTests.cpp  CrashReportReaderTests.cpp  FileMappingTests.cpp  MiniDumpReaderTests.cpp  MsfFileTests.cpp  MsfStreamTests.cpp  OutputterTests.cpp  PdbCacheTests.cpp  PdbCompilandStreamTests.cpp  PdbDebugInfoStreamTests.cpp  PdbHeadersStreamTests.cpp  PdbReaderTests.cpp  PdbSymbolStreamTests.cpp  PdbSymbolTests.cpp  PeReaderTests.cpp  StackWalkerTests.cpp  Utils.cpp  Utils.h  libdumper_tests_vs2010.vcxproj  libdumper_tests_vs2010.vcxproj.filters  stdafx.h
crashfix/crashfix_service/libtest/: CMakeLists.txt  Tests.cpp  Tests.h  Utils.cpp  Utils.h  libtest_vs2010.vcxproj  libtest_vs2010.vcxproj.filters  stdafx.cpp  stdafx.h
crashfix/crashfix_service/nsis_plugin/: exdll.h  nsis_plugin.cpp  nsis_plugin.def  nsis_plugin.vcxproj  nsis_plugin.vcxproj.filters  stdafx.cpp  stdafx.h
crashfix/crashfix_service/service_installer/: DeleteConfigPage.nsh  EmailPage.nsh  InstallerName.txt  LicensePage.nsh  UninstallLog.nsh  installler.nsi
crashfix/crashfix_service/service_installer/NSISPlugins/: nsis_plugin.iobj  nsis_plugin.ipdb
crashfix/crashfix_service/test_data/: crashdump.dmp  crashrpt.xml  crashtestd.dmp
crashfix/crashfix_service/test_data/conf/: crashfixd.conf.linux  crashfixd.conf.win32
crashfix/crashfix_service/test_data/keys/: testprivkey.pem
crashfix/crashfix_service/test_data/outputter/linux/: testdoc.txt  testdoc.xml
crashfix/crashfix_service/test_data/vs2010/2/: crashdump.dmp
crashfix/crashfix_service/test_data/vs2010/x64/2/: crashdump.dmp
crashfix/crashfix_service/uploader/: UploaderConsole.cpp  UploaderConsole.h  main.cpp  stdafx.cpp  stdafx.h  uploader_vs2010.vcxproj  uploader_vs2010.vcxproj.filters
crashfix/crashfix_service/uploader_gui/: MainDlg.cpp  MainDlg.h  resource.h  stdafx.cpp  stdafx.h  uploader_gui.cpp  uploader_gui.h  uploader_gui.rc  uploader_gui_vs2010.vcxproj  uploader_gui_vs2010.vcxproj.filters
crashfix/crashfix_webapp/: index.php
crashfix/crashfix_webapp/css/: main.css  screen.css
crashfix/crashfix_webapp/docs/: phpdoc.dist.xml
crashfix/crashfix_webapp/protected/: build.xml
crashfix/crashfix_webapp/protected/commands/: PollCommand.php
crashfix/crashfix_webapp/protected/components/: AdminMenuPortlet.php  BatchImporter.php  Controller.php  Daemon.php  MainMenuPortlet.php  MiscHelpers.php  UserIdentity.php  WebUser.php
crashfix/crashfix_webapp/protected/config/: common.php  console.php  main.php  test.php  user_params.ini
crashfix/crashfix_webapp/protected/controllers/: BugController.php  CrashGroupController.php  CrashReportController.php  DebugInfoController.php  MailController.php  ProjectController.php  SiteController.php  UserController.php  UserGroupController.php
crashfix/crashfix_webapp/protected/data/: initdb.bat  inittestdb.bat
crashfix/crashfix_webapp/protected/migrations/: m120515_122132_initial.php  m121110_163852_bug_assigned_to_required.php  m121114_141005_user_cur_project_field.php  m130125_051239_add_module_guidnage_field.php  m130227_153955_add_project_age_flag.php  m130320_130659_exceptionaddress_unsigned.php  m130414_150316_add_indexes.php
crashfix/crashfix_webapp/protected/models/: AppVersion.php  Bug.php  BugAttachment.php  BugChange.php  BugComment.php  BugCrashGroupMapping.php  BugCrashReportMapping.php  BugStatusChange.php  CrashGroup.php  CrashReport.php  CrashReportForm.php  CustomProp.php  DebugInfo.php  FileItem.php  LoginForm.php  Lookup.php  MailQueue.php  Module.php  Operation.php  (+9 more)
crashfix/doc/: Doxyfile  Warnings.txt  header.html
crashfix/doc/dox/: administration.dox  architecture_overview.dox  batch_import.dox  bugs.dox  building_crashfix.dox  changelog.dox  client_integration.dox  collections.dox  crash_reports.dox  daemon.dox  daily_usage.dox  debug_info.dox  digest.dox  faq.dox  first_login.dox  getting_started.dox  install_linux.dox  install_windows.dox  installation.dox  introduction_to_crashfix.dox  logging.dox  mail.dox  mainpage.dox  projects.dox  upgrade_linux.dox  upgrade_windows.dox  uploader_tool.dox  users_and_roles.dox
crashfix/site/: index.html  style.css
(+194 files in other folders)
